@@ -1,4 +1,4 @@
 #' @param discrete.names [\code{logical(1)}]\cr
-#'   Should names be sampled for discrete / logical paramaters or values instead?
+#'   Should names be sampled for discrete paramaters or values instead?
 #'   Default is code {FALSE}.
 
